--- a/crop-recommendation/src/styles/Calendar.css
+++ b/crop-recommendation/src/styles/Calendar.css
@@ -38,36 +38,49 @@ body::before {
 
 .menu {
   position: absolute;
-  right: 20px;
+  right: 10px;
   top: 20px;
-  z-index: 2;
+  height: 100%;
+  width: 17%;
+  display: flex;
+  flex-direction: column; 
+  align-items: center; 
+}
+
+.menu.open {
+  background-color: #50736477;
+  transition: 0.5s ease-in-out;
 }
 
 .menu ul {
   list-style: none;
-  margin: 0;
   padding: 0;
+  margin: 0;
+  margin-top: 40px;
 }
 
 .menu ul li {
-  display: inline-block;
-  margin-left: 20px;
-}
-
-.menu ul li:first-child {
-  margin-left: 0;
+  margin-bottom: 30px;
 }
 
 .menu ul li a {
   text-decoration: none;
-  color: rgb(241, 241, 218);
-  font-size: 16px;
+  color: #dfd6c9;
+  font-size: 1em;
+  display: block;
   transition: color 0.3s ease;
 }
 
-.menu ul :hover {
-  color: #9b6b60;
-  transform: scale(1.1);
+.menu ul li a:hover {
+  color: #6f8e71;
+}
+
+.menu-toggle {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  cursor: pointer;
+  color: whitesmoke;
 }
 
 .event-selector {
